# ProyectoFinal_ALSE_DSantos_MReina

./: README.md
inventario/: CMakeLists.txt
inventario/include/: component.h  databasemanager.h  inventorymanager.h  mainwindow.h  reportgenerator.h
inventario/src/: component.cpp  databasemanager.cpp  inventorymanager.cpp  main.cpp  mainwindow.cpp  reportgenerator.cpp
